--- a/index.html
+++ b/index.html
@@ -6259,7 +6259,7 @@
                   <div style="height:100%;width:100%"></div><!--/$-->
                 </div>
                 <div class="ssr-variant hidden-5vjem1 hidden-175va30">
-                  <div class="framer-7q2zv4" data-framer-name="Booking for Q3'25"
+                  <div class="framer-7q2zv4" data-framer-name="Taking new Projects"
                     style="outline:none;display:flex;flex-direction:column;justify-content:flex-start;flex-shrink:0;transform:none"
                     data-framer-component-type="RichTextContainer">
                     <p style="--font-selector:R0Y7SmV0QnJhaW5zIE1vbm8tNTAw;--framer-font-family:&quot;JetBrains Mono&quot;, monospace;--framer-font-size:14px;--framer-font-weight:500"
@@ -6267,7 +6267,7 @@
                   </div>
                 </div>
                 <div class="ssr-variant hidden-175va30 hidden-72rtr7">
-                  <div class="framer-7q2zv4" data-framer-name="Booking for Q3'25"
+                  <div class="framer-7q2zv4" data-framer-name="Taking new Projects"
                     style="outline:none;display:flex;flex-direction:column;justify-content:flex-start;flex-shrink:0;transform:none"
                     data-framer-component-type="RichTextContainer">
                     <p style="--font-selector:R0Y7SmV0QnJhaW5zIE1vbm8tNTAw;--framer-font-family:&quot;JetBrains Mono&quot;, monospace;--framer-font-size:13px;--framer-font-weight:500"
@@ -6275,7 +6275,7 @@
                   </div>
                 </div>
                 <div class="ssr-variant hidden-5vjem1 hidden-72rtr7">
-                  <div class="framer-7q2zv4" data-framer-name="Booking for Q3'25"
+                  <div class="framer-7q2zv4" data-framer-name="Taking new Projects"
                     style="outline:none;display:flex;flex-direction:column;justify-content:flex-start;flex-shrink:0;transform:none"
                     data-framer-component-type="RichTextContainer">
                     <p style="--font-selector:R0Y7SmV0QnJhaW5zIE1vbm8tNTAw;--framer-font-family:&quot;JetBrains Mono&quot;, monospace;--framer-font-size:12px;--framer-font-weight:500"
